ChangeLog for the Astro project.

20190903:
	* portability fixes for Raspbian/Debian 10
	* fix ASI detection

20190901:
	* fix bug that prevented calculated from being saved
	* add callback for deleted tasks
	* add long exposure time to Atik cameras that only support short
	  exposures
	* add add() method to Image template
	* fix wrong column name in taskqueue table

20190823:
	* fix ifstream.fail missing in catalogs
	* fix bug that PGC data file open was not checked
	* get rid of macros major/minor, as they conflict with member 
	  variable names in Stellarium.cpp

20190822:
	* add MilkyWay class
	* add scalar product to RaDec
	* add exp(), distance() methods to RaDec

20190729:
	* fix ICE installation location

20190807:
	* database backend for PGC catalog implemented

20190806:
	* added PGC catalog
	* improved performance of DSO catalogs using singleton map

20190729:
	* add LD_LIBRARY_PATH so that snowstar is able to find libraries
	  (seems to be necessary for Ice-3.7.3, the current git version)
	* fix build scripts
	* add elliptical outlines from stellarium catalog

20190728:
	* add findLike to BSC
	* add star catalogs to catalogdialog

20190624:
	* add AC_OPENMP

20180514:
	* portability to Ubuntu 18.04

20180507:
	* add media path to configuration backend

20180503:
	* add retries to USB descriptor string retrieval to work around
	  problem with at90usb162 issue

20150718:
	* convert astro::camera::Exposure class to the more common conventions
	  in this project, in particular, make all members private
	* convert accessors in Binning class to our conventions

20150717:
	* Move DeviceNicer and Denicer to astro::device::nice and to the
	  main library, so that we can use network names in the main library
	* improve DeviceName class so that it understands local and network
	  device names, and can convert between them
	* add missing Mount type to the DeviceAccessor class
	* add Test for Nicer/Denicer classes

20150713: